--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 GOOGLE_CLIENT_ID="366480223374-u4rtm4q42p7pi6513n6fvs34i9sull5a.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="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",
+# GOOGLE_CLIENT_SECRET="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",
 GOOGLE_REDIRECT_URL="http://localhost:8000/user/auth/google"
